<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".UserDetailActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgProfilePicture"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        tools:src="@tools:sample/avatars" />

    <LinearLayout
        android:background="@drawable/background_grey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginBottom="25dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/TextContent.Subtitle"
                android:text="@string/repo" />

            <TextView
                android:id="@+id/tvRepo"
                style="@style/TextContent.Secondary"
                tools:text="45" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/TextContent.Subtitle"
                android:text="@string/follower" />

            <TextView
                android:id="@+id/tvFollower"
                style="@style/TextContent.Secondary"
                tools:text="203" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/TextContent.Subtitle"
                android:text="@string/following" />

            <TextView
                android:id="@+id/tvFollowing"
                style="@style/TextContent.Secondary"
                tools:text="203" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        style="@style/TextContent.Subtitle"
        android:text="@string/name" />

    <TextView
        android:id="@+id/tvName"
        style="@style/TextContent.Primary"
        android:layout_marginBottom="15dp"
        tools:text="Full Name" />

    <TextView
        style="@style/TextContent.Subtitle"
        android:text="@string/username" />

    <TextView
        android:id="@+id/tvUsername"
        style="@style/TextContent.Primary"
        android:layout_marginBottom="25dp"
        tools:text="Full Name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:background="@drawable/background_blue"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/TextContent.Subtitle"
                android:textColor="@color/grey_light"
                android:text="@string/company" />

            <TextView
                android:id="@+id/tvCompany"
                style="@style/TextContent.Secondary"
                android:textColor="@color/white"
                tools:text="GOJEK" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/TextContent.Subtitle"
                android:textColor="@color/grey_light"
                android:text="@string/location" />

            <TextView
                android:id="@+id/tvLocation"
                style="@style/TextContent.Secondary"
                android:textColor="@color/white"
                tools:text="Yogyakarta, Indonesia" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>